--- a/prepros-6.config
+++ b/prepros-6.config
@@ -69,8 +69,8 @@
     "assignNewPortAutomatically": true,
     "enable": true,
     "proxy": {
-      "enable": false,
-      "url": ""
+      "enable": true,
+      "url": "ymaps"
     }
   },
   "browser-sync": {
